--- a/.github/actions/install/action.yml
+++ b/.github/actions/install/action.yml
@@ -7,6 +7,6 @@ runs:
     - name: Download latest kuori binary using gh CLI
       shell: bash
       run: |
-        gh release download --repo wim-web/kuori --latest --pattern 'kuori_*_x86_64-unknown-linux-musl.tar.gz'
+        gh release download --repo wim-web/kuori --pattern 'kuori_*_x86_64-unknown-linux-musl.tar.gz'
         tar -xzf kuori_*_x86_64-unknown-linux-musl.tar.gz
         sudo mv kuori /usr/local/bin/kuori
