--- a/.github/actions/install/action.yml
+++ b/.github/actions/install/action.yml
@@ -10,3 +10,5 @@ runs:
         gh release download --repo wim-web/kuori --pattern 'kuori_*_x86_64-unknown-linux-musl.tar.gz'
         tar -xzf kuori_*_x86_64-unknown-linux-musl.tar.gz
         sudo mv kuori /usr/local/bin/kuori
+      env:
+        GH_TOKEN: ${{ github.token }}
