--- a/.github/actions/install/action.yml
+++ b/.github/actions/install/action.yml
@@ -10,10 +10,11 @@ runs:
         gh release download --repo wim-web/kuori --pattern 'kuori_*_x86_64-unknown-linux-musl.tar.gz'
         tar -xzf kuori_*_x86_64-unknown-linux-musl.tar.gz
 
-        ls
-
         mkdir -p ${{ github.workspace }}/bin
         mv kuori ${{ github.workspace }}/bin
+
+        ls ${{ github.workspace }}/bin
+
         chmod +x ${{ github.workspace }}/bin/kuori
         echo ${{ github.workspace }}/bin >> $GITHUB_PATH
       env:
