--- a/.github/workflows/release.yaml
+++ b/.github/workflows/release.yaml
@@ -11,7 +11,7 @@ jobs:
     steps:
       - uses: actions/checkout@v4
 
-      - run: cargo build --release
+      - run: cargo build --release --out-dir .
         
       - run: ./kuori
 
