--- a/.github/workflows/release.yaml
+++ b/.github/workflows/release.yaml
@@ -1,8 +1,8 @@
 name: Release
 on:
   push:
-    tags:
-      - 'v*.*.*'
+    # tags:
+    #   - 'v*.*.*'
   
 permissions:
   contents: write 
@@ -14,17 +14,23 @@ jobs:
     steps:
       - uses: actions/checkout@v4
 
-      - run: cargo build --release
+      - name: cargo build
+        run: |
+          cargo build --release
+          mv target/release/kuori kuori-x86_64-unknown-linux-gnu
         
-      - run: target/release/kuori || true
-
       - name: Create GitHub Release
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         run: |
-          gh release create ${{ github.ref }} \
-            target/release/kuori#kuori-x86_64-unknown-linux-gnu \
-            --title "Release ${{ github.ref }}"
+          # gh release create ${{ github.ref }} \
+          #   target/release/kuori#kuori-x86_64-unknown-linux-gnu \
+          #   --title "Release ${{ github.ref }}"
+          
+          
+          gh release create test \
+            kuori-x86_64-unknown-linux-gnu \
+            --title "Release test"
       
 
       
