--- a/.github/actions/install/action.yml
+++ b/.github/actions/install/action.yml
@@ -7,9 +7,9 @@ runs:
     - name: Download latest kuori binary using gh CLI
       shell: bash
       run: |
-        gh release download --repo wim-web/kuori --pattern 'kuori-x86_64-unknown-linux-*'
+        gh release download --repo wim-web/kuori --pattern 'kuori-x86_64-unknown-linux-gnu'
 
-        mv kuori ${{ github.workspace }}/bin
+        mv kuori-x86_64-unknown-linux-gnu ${{ github.workspace }}/bin/kuori
         chmod +x ${{ github.workspace }}/bin/kuori
         echo ${{ github.workspace }}/bin >> $GITHUB_PATH
       env:
