--- a/.github/workflows/release.yaml
+++ b/.github/workflows/release.yaml
@@ -1,8 +1,8 @@
 name: Release
 on:
   push:
-    # tags:
-    #   - 'v*.*.*'
+    tags:
+      - 'v*.*.*'
   
 permissions:
   contents: write 
@@ -23,14 +23,6 @@ jobs:
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         run: |
-          # gh release create ${{ github.ref }} \
-          #   target/release/kuori#kuori-x86_64-unknown-linux-gnu \
-          #   --title "Release ${{ github.ref }}"
-          
-          
-          gh release create test \
-            kuori-x86_64-unknown-linux-gnu \
-            --title "Release test"
-      
-
-      
+          gh release create ${{ github.ref }} \
+            target/release/kuori#kuori-x86_64-unknown-linux-gnu \
+            --title "Release ${{ github.ref }}"
