--- a/.github/actions/install/action.yml
+++ b/.github/actions/install/action.yml
@@ -9,8 +9,7 @@ runs:
       run: |
         gh release download --repo wim-web/kuori --pattern 'kuori-x86_64-unknown-linux-gnu'
 
-        ls
-
+        mkdir -p ${{ github.workspace }}/bin
         mv kuori-x86_64-unknown-linux-gnu ${{ github.workspace }}/bin/kuori
         chmod +x ${{ github.workspace }}/bin/kuori
         echo ${{ github.workspace }}/bin >> $GITHUB_PATH
