--- a/.github/workflows/install_test.yaml
+++ b/.github/workflows/install_test.yaml
@@ -2,13 +2,9 @@ name: install test
 on:
   pull_request:
     
-    
 jobs:
   release-linux:
     runs-on: ubuntu-latest
     steps:
-      - uses: wim-web/kuori/.github/actions/install@install_action
-      
-
-
-      - run: kuori
+      - uses: wim-web/kuori/.github/actions/install@main
+      - run: type kuori
