--- a/.github/workflows/release.yaml
+++ b/.github/workflows/release.yaml
@@ -24,5 +24,5 @@ jobs:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         run: |
           gh release create ${{ github.ref }} \
-            target/release/kuori#kuori-x86_64-unknown-linux-gnu \
+            kuori-x86_64-unknown-linux-gnu \
             --title "Release ${{ github.ref }}"
